--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/DuffmanCC/soroban-react-component"
+    "url": "git+https://github.com/DuffmanCC/soroban-react-component.git"
   },
   "exports": {
     ".": {
