--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "soroban-react-component",
   "description": "A simple React component to render a Soroban (Japanese abacus)",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "type": "module",
   "main": "./dist/soroban.umd.js",
   "module": "./dist/soroban.es.js",
@@ -15,6 +15,9 @@
   ],
   "author": "Carlos Ortiz <carlosor@gmail.com> (https://carlosortiz.dev/)",
   "license": "MIT",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
