--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "soroban-react-component",
   "description": "A simple React component to render a Soroban (Japanese abacus)",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "type": "module",
-  "main": "./dist/soroban.umd.js",
-  "module": "./dist/soroban.es.js",
-  "style": "./dist/soroban-react-component.css",
+  "main": "/dist/index.umd.js",
+  "module": "/dist/index.es.js",
+  "types": "/dist/index.d.ts",
+  "style": "/dist/soroban-react-component.css",
   "keywords": [
     "react",
     "component",
@@ -21,7 +22,6 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "prepublish": "rm -rf ./dist && npm run build",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest"
@@ -34,15 +34,12 @@
     "url": "https://github.com/DuffmanCC/soroban-react-component/issues",
     "email": "carlosor@gmail.com"
   },
-  "exports": {
-    ".": {
-      "import": "./dist/soroban.es.js",
-      "require": "./dist/soroban.umd.js"
-    }
-  },
   "peerDependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -60,5 +57,9 @@
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0",
     "vitest": "^3.0.7"
+  },
+  "dependencies": {
+    "@types/node": "^22.13.9",
+    "vite-plugin-dts": "^4.5.3"
   }
 }
