--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "soroban-react-component",
   "description": "A simple React component to render a Soroban (Japanese abacus)",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "type": "module",
   "main": "/dist/index.umd.js",
   "module": "/dist/index.es.js",
   "types": "/dist/index.d.ts",
-  "style": "/dist/soroban-react-component.css",
+  "style": "/dist/index.css",
   "keywords": [
     "react",
     "component",
