--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "description": "A simple React component to render a Soroban (Japanese abacus)",
   "version": "1.0.5",
   "type": "module",
-  "main": "/dist/index.umd.js",
-  "module": "/dist/index.es.js",
-  "types": "/dist/index.d.ts",
-  "style": "/dist/index.css",
+  "main": "./dist/index.umd.js",
+  "exports": {
+    ".": "./dist/index.es.js",
+    "./types": "./dist/index.d.js",
+    "./style": "./dist/index.css"
+  },
   "keywords": [
     "react",
     "component",
