--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,9 +21,9 @@
     /* The "typeRoots" configuration specifies the locations where 
        TypeScript looks for type definitions (.d.ts files) to 
        include in the compilation process.*/
-    "typeRoots": ["./dist/index.d.ts", "node_modules/@types"]
+    // "typeRoots": ["./dist/index.d.ts", "node_modules/@types"]
   },
   /* include /index.ts*/
   "include": ["src", "./index.ts"],
-  // "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
